--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,12 @@
     align-items: center;
 }
 
-.unit {
-    height: 20px;
-    width: 20px;
-    border-style: solid;
-    border-color: black;
-}
-
 .color {
     background-color: blue;
+}
+
+#canvas {
+    width: 800px;
+    height: 800px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
