--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body {
     font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #333333;
     background-color: #F8F0E3;
+    width: 100vw;
+    height: 100vh;
 }
 
 h1 {
