--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,7 @@ body {
     font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #333333;
     background-color: #F8F0E3;
-    width: 100vw;
-    height: 100vh;
+    background-size: cover;
 }
 
 h1 {
